HEAD
	+ Setup mail account on enable for users that already have mail attribute
3.2.6
	+ Added and used checkMailNotInUse method
	+ Don't add mail which already exists when adding group alias
	+ Postfix max mail size is increased by 36% because of base64 encoding
3.2.5
	+ Better integration of group alias addon
3.2.4
	+ Added openchange outgoing mail rewriting
3.2.3
	+ Nopass dovecot policy enabled only when Openchange provisioned
3.2.2
	+ Added required code to integrate with OpenChange
	+ Added missing EBox::Exceptions uses
3.2.1
	+ Preservice and postservice hooks now should work properly
	+ Fixed regression which broke external account modification
3.2
	+ Set version to 3.2
3.1.7
	+ Override daemons when migrating from 3.0
	+ Minor enhancements to some note texts
3.1.6
	+ Use DATETIME type in date column for consolidation tables
	+ Summarised report has breadcrumbs now
3.1.5
	+ Fixed typo in external account user corner model
	+ Adapted to new CSS styles
	+ Fixed bug which allowed to use incorrect external addresses in
	  fetchmail accounts
3.1.4
	+ Fixed typo in master.cf when mail filter is enabled
3.1.3
	+ Adapt group and users addon to right panel view
	+ mail-ldap init script dies on LDAP add error
	+ Added menu icon
	+ Added new userCorner method to external accounts model
	+ Updated to use renamed method EBox::Ldap::connection.
	+ Adapt firewall rules to new accept chains
	+ Adapted user addon to multi-OU tree view
	+ Removed no longer necessary jQuery noConflict()
	+ Search the whole LDAP tree looking for groups and users.
	+ Added incompatiblity with external AD authentication mode
3.1.2
	+ Use new EBox::Users namespace instead of EBox::UsersAndGroups
3.1.1
	+ Removed deprecated backup domain methods
3.1
	+ Added Pre-Depends on mysql-server to avoid problems with upgrades
	+ Depend on zentyal-core 3.1
3.0.5
	+ Regenerate kerberos key tab in LDAP reprovision
	+ Banner display mail name instead of host name
	+ Adapted to EBox::LdapModule changes