@@ -1,4 +1,6 @@
 HEAD
+	+ fixed bug when replacing mail address through the edit user form
+	+ Better integration between mail addon and mail field
 	+ Fixed bug when altering mail account in formulary
 3.2.10
 	+ Added and used checkMailNotInUse method
