@@ -1,4 +1,5 @@
 HEAD
+	+ Better integration between mail addon and mail field
 	+ Setup mail account on enable for users that already have mail attribute
 3.2.6
 	+ Added and used checkMailNotInUse method
